--- a/index.html
+++ b/index.html
@@ -13,11 +13,71 @@
 </head>
 
 <body>
+  <style>
+    body {
+      margin: 0;
+    }
+
+    main h2 {
+      background-color: #333;
+      text-align: center;
+      color: #fff;
+      padding: 10px 50px;
+    }
+
+    fieldset {
+      display: flex;
+      padding: 10px;
+      justify-content: center;
+      align-items: center;
+      margin: 10px;
+      font-size: 22px;
+      text-align: center;
+    }
+
+    fieldset label {
+      margin: 10px 0px;
+    }
+
+    input {
+      text-align: center;
+      justify-content: center;
+      margin: auto;
+      align-items: center;
+      padding: 5px 50px;
+    }
+
+    #result {
+      text-align: center;
+      font-size: 22px;
+    }
+
+    .btns {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 30%;
+    }
+
+    button {
+      padding: 10px 40px;
+    }
+
+    footer {
+      background-color: #333;
+      text-align: center;
+      color: #fff;
+      padding: 10px 50px;
+    }
+
+    footer a {
+      color: #fff;
+      cursor: pointer;
+    }
+  </style>
 
   <main>
 
     <h2>Interactive app!</h2>
-    <hr>
 
     <fieldset>
       <label for="guest">Enter your name (2 to 40 characters):</label>
@@ -35,18 +95,20 @@
     </fieldset>
 
     <h2>Try these:</h2>
-    <hr>
 
-    <button id="addButton">Add</button>
-    <button id="getJokeButton">Get Joke</button>
-    <button id="clicker">Coming soon!</button>
-    <hr>
+    <div class="btns">
 
+
+
+      <button id="addButton">Add</button>
+      <button id="getJokeButton">Get Joke</button>
+      <button id="clicker">Coming soon!</button>
+
+    </div>
     <p id="result"></p>
 
   </main>
 
-  <hr>
 
   <footer>
     <span>Right-click / Inspect / Console</span>
